deps/v8/test/message/strong-object-set-proto.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:9: TypeError: On strong object #<Object>, redefining the internal prototype is deprecated
({}).__proto__ = {};
               ^
TypeError: On strong object #<Object>, redefining the internal prototype is deprecated
    at Object.set __proto__ (native)
    at *%(basename)s:9:16
